# ucr-bigdatalab-starmap

./: README.md
rsgrove-tiler/: RSGroveTiler.py  count.py  plot_tiles.py  query_handler.py  split_dataset_by_tiles.py  update_index.py  verify_geoparquet.py  visualise.py  visualiser.py
scripts/: benchmark_geometry_vs_all_coloumns.py  benchmark_geopandas.py  benchmark_geoparquet.py  benchmark_geoparquet_internal_filtering.py  benchmark_internal_external_filtering.py  benchmark_internal_only.py  benchmark_writes.py  convert.py  inspect_geoparquet.py  reduce_size.py  run_all_rowgroup_benchmarks.py  slice_geojson_bbox.py  visualise_hilbert_curve.py
tile-geoparquet/: README.md  compare_bboxes.html  logs.txt  pyproject.toml  results.csv  sweep_mpf.py  tiles_bboxes.html  tiles_map.html
tile-geoparquet/.venv312/: pyvenv.cfg
tile-geoparquet/scripts/: inspec_geoparquet.py  tiles_visualiser.py  validate_geoparquet.py  verify_geoparquet.py
tile-geoparquet/tile_geoparquet/: RSGrove.py  __init__.py  assigner.py  bounding_bboxes_from_csv.html  boxes_map.html  cli.py  datasource.py  orchestrator.py  parquet_bboxes.html  rsgrove_partitions_debug.csv  rsgrove_partitions_debug_bboxes.html  tiles_bboxes.html  utils_large.py  writer_pool.py
tile-geoparquet/tile_geoparquet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
